[package]
name = "opam-file-rs"
version = "0.1.1"
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/puripuri2100/opam-file-rs"
keywords = ["ocaml", "opam", "parser"]
categories = ["Encoding", "Parser implementations"]
description = "Parser and printer for the opam file syntax with Rust"
exclude = ["tests/*", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.4"
thiserror = "1.0.23"

[build-dependencies]
lalrpop = "0.19.4"

